ver 0.2: Routing, AppLayout, Login/Register pages

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --bg-primary: #e0e4d9; // 60%
+  --bg-primary: #f0efeb; // 60%
   --bg-secondary: #e0e4d9; // 30%
   --bg-accent: #e0e4d9; // 10%
 
