--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -1,6 +1,8 @@
 @use "reset" as *;
 @use "variables" as *;
 
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+
 body {
   background-color: var(--bg-primary);
 }
