--- a/client/src/app/layout/AppLayout.scss
+++ b/client/src/app/layout/AppLayout.scss
@@ -1,10 +1,8 @@
 .app-layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
 .app-main {
   flex: 1 1 auto;
-  width: 100%;
-  height: 100%;
 }
