--- a/client/src/app/layout/AppLayout.scss
+++ b/client/src/app/layout/AppLayout.scss
@@ -1,8 +1,19 @@
 .app-layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  width: 100vw;
+  min-height: 100vh;
 }
 .app-main {
-  flex: 1 1 auto;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 1.2rem;
+  color: #666;
 }
