--- a/client/src/pages/Auth/Registration/ui/RegisterPage.scss
+++ b/client/src/pages/Auth/Registration/ui/RegisterPage.scss
@@ -15,12 +15,10 @@
   padding: 30px 0;
 
   width: 450px;
-  border: 1px solid #000;
 
   &__title {
     font-size: 2em;
     margin-bottom: 40px;
-    font-family: "Righteous", sans-serif;
   }
 
   &__login {
@@ -36,18 +34,17 @@
     position: relative;
     width: 70%;
     margin-bottom: 20px;
-    font-family: Arial, Helvetica, sans-serif;
 
     & input {
       width: 100%;
       height: 35px;
+      padding: 0 10px;
     }
   }
 }
 .reg-wrapper-buttons {
   display: flex;
   margin-top: 30px;
-  font-family: sans-serif;
   &_login {
     margin-right: 2em;
   }
@@ -65,5 +62,6 @@
     right: 1rem;
     top: 50%;
     transform: translateY(-50%);
+    font-family: sans-serif;
   }
 }
