ver 0.3: crt.unfinished_profile crt.error_boundary fix.transformer_for_date crt.returnTo_system

--- a/client/src/pages/Home/ui/HomePage.scss
+++ b/client/src/pages/Home/ui/HomePage.scss
@@ -1,13 +1,13 @@
 .home-content {
   width: 100%;
-  min-height: calc(100vh - 80px);
+  min-height: calc(100vh - var(--header-height));
   position: relative;
 }
 .start-block {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: calc(100vh - 80px);
+  height: calc(100vh - var(--header-height));
 
   &-left {
     flex: 0 1 50%;
