--- a/client/src/pages/Auth/Registration/ui/RegisterPage.scss
+++ b/client/src/pages/Auth/Registration/ui/RegisterPage.scss
@@ -27,7 +27,58 @@
   &__pass {
   }
 
-  &__repeat-pass {
+  &__password-toggle {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.7;
+    transition:
+      opacity 0.2s ease,
+      transform 0.1s ease;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &:active {
+      transform: translateY(-50%) scale(0.95);
+    }
+
+    &_pass {
+      img {
+        width: 20px;
+        height: 20px;
+        opacity: inherit;
+        transition: inherit;
+
+        &.eye--open {
+          transform: rotate(90deg);
+        }
+      }
+    }
+
+    &_repeat-pass {
+      img {
+        width: 20px;
+        height: 20px;
+        opacity: inherit;
+        transition: inherit;
+
+        &.eye--open {
+          transform: rotate(90deg);
+        }
+      }
+    }
   }
 
   &__input {
@@ -38,7 +89,7 @@
     & input {
       width: 100%;
       height: 35px;
-      padding: 0 10px;
+      padding: 0 40px 0 10px;
     }
   }
 }
@@ -53,14 +104,14 @@
   }
 }
 
-.required {
+.required-input {
   &::after {
     content: "*";
     color: red;
     font-size: 1.5em;
     position: absolute;
-    right: 1rem;
-    top: 50%;
+    right: -0.5em;
+    top: 0.5em;
     transform: translateY(-50%);
     font-family: sans-serif;
   }
