--- a/client/src/pages/Home/ui/HomePage.scss
+++ b/client/src/pages/Home/ui/HomePage.scss
@@ -68,7 +68,7 @@
       transition: all 0.2s ease;
 
       & span {
-        color: var(--text-accent);
+        color: var(--text-onAccent);
         font-size: 1.3em;
         display: flex;
         align-items: center;
