--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,33 +1,53 @@
 :root {
-  /* Основной фон (60%) - чистый, свежий */
-  --bg-primary: #f8fafc;
-  /* Карточки/Элементы (30%) - белый для объема */
+  // Основной фон (60%) - чистый, свежий
+  --bg-primary: #f1f5f9;
+  // Карточки/Элементы (30%) - белый для объема
   --bg-secondary: #ffffff;
-  /* Акцентные плашки (10%) - темный антрацит */
+  // Акцентные плашки (10%) - темный антрацит
   --bg-accent: #1a1a1a;
+  // Всплывающие поверхности/кнопки/поп-апы
+  --surface: #edf2f7 ;
+  // Элементы над surface
+  --onSurface: #1a1a1a ;
 
-  /* Текст основной */
+  // Текст основной
   --text-primary: #1a1a1a;
-  /* Тот самый глубокий розовый для выделения темы */
-  --theme-active: #c14e6f;
-  /* Твой фирменный красный для кнопок */
+  // Текст второй по важности
   --text-secondary: #e00345;
-
-  --header-height: 80px;
+  // Редкий текст
+  --text-accent: #2563eb ;
+  // Текст над --bg-accent (для нормальной видимости)
+  --text-onAccent: #ffffff ;
 }
 
 [data-theme="dark"] {
-  /* Глубокий графит (60%) */
+  // Глубокий графит (60%)
   --bg-primary: #121212;
-  /* Карточки (30%) - чуть светлее базы для объема */
+  // Карточки (30%) - чуть светлее базы для объема
   --bg-secondary: #1e1e1e;
-  /* Акценты (10%) - агрессивный красный */
+  // Акценты (10%) - агрессивный красный
   --bg-accent: #ff3131;
+  // Всплывающие поверхности/кнопки/поп-апы
+    --surface: #2d2d2d ;
+  // Элементы над surface
+  --onSurface: #e0e4d9 ;
 
+  // Текст основной
   --text-primary: #e0e4d9;
+  // Текст второй по важности
   --text-secondary: #c74a3b;
+  // Редкий текст
+  --text-accent: #ff3131 ;
+  // Текст над --bg-accent (для нормальной видимости)
+  --text-onAccent: #ffffff ;
 }
 
-// :root,
-// [data-theme="dark"] {
-// }
+:root,
+[data-theme="dark"] {
+  // Для переключателей
+  --boolean-true: #6b8e23;
+  --boolean-false: #c74a3b;
+
+  // Высота шапки и подвала
+  --header-height: 80px;
+}
