--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -44,6 +44,13 @@ input::-ms-clear {
   display: none;
 }
 button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
   cursor: pointer;
 }
 button::-moz-focus-inner {
